Adding functionality to menu for admin and members